--- a/trunk/xf-export/XFDataDump/XFDataDump/Properties/Resources.resx
+++ b/trunk/xf-export/XFDataDump/XFDataDump/Properties/Resources.resx
@@ -118,8 +118,17 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="tmpTickerTable" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\tmptickertable.sql;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  <data name="createTickerTable" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\createTickerTable.sql;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
+  <data name="exportNFCompanies" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\exportNFCompanies.sql;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
+  <data name="exportTickerTable" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\exportTickerTable.sql;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
+  <data name="exportUniqueCurrency" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\exportuniquecurrency.sql;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
   <data name="updateTmpTickerTable" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\updateTmpTickerTable.sql;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
