--- a/trunk/xf-export/XFDataDump/XFDataDump/Properties/Resources.resx
+++ b/trunk/xf-export/XFDataDump/XFDataDump/Properties/Resources.resx
@@ -128,7 +128,7 @@
     <value>..\exportTickerTable.sql;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
   <data name="exportUniqueCurrency" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\exportuniquecurrency.sql;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+    <value>..\exportUniqueCurrency.sql;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
   <data name="updateTmpTickerTable" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\updateTmpTickerTable.sql;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
