Enhanced  Error Validation with a new Error code "Account is Expired" added List of errors in Json respone for UI

--- a/service/src/main/resources/META-INF/messages/messages.properties
+++ b/service/src/main/resources/META-INF/messages/messages.properties
@@ -3,6 +3,7 @@ token.invalidToken=Invalid Token.
 password.matchError=Passwords do not match.
 password.validationError=Password does not meet criteria.
 error.unknown=Bad Request
+cron=0 0 13 * * ?
 AbstractUserDetailsAuthenticationProvider.badCredentials=Invalid username or password
 ##AbstractUserDetailsAuthenticationProvider.disabled=Account has not been activated
 ##AbstractUserDetailsAuthenticationProvider.locked=Account has been locked
