--- a/trunk/service/src/main/resources/META-INF/messages/messages.properties
+++ b/trunk/service/src/main/resources/META-INF/messages/messages.properties
@@ -2,6 +2,7 @@ user.exists=User already exists.
 token.invalidToken=Invalid Token.
 password.matchError=Passwords do not match.
 password.validationError=Password does not meet criteria.
+user.verified=User is already verified.
 error.unknown=Bad Request
 cron=0 0 13 * * ?
 AbstractUserDetailsAuthenticationProvider.badCredentials=Invalid username or password
