Adding changes to reset verification email response type for verified users

--- a/service/src/main/resources/META-INF/messages/messages.properties
+++ b/service/src/main/resources/META-INF/messages/messages.properties
@@ -1,4 +1,10 @@
 user.exists=User already exists.
+user.already.verified= User already verified
+user.doesnot.exist=User does not exist
+user.already.verified.code=111
+user.doesnot.exist.code=112
+success=success
+success.code=110
 token.invalidToken=Invalid Token.
 password.matchError=Passwords do not match.
 password.validationError=Password does not meet criteria.
