--- a/trunk/service/src/main/resources/META-INF/messages/messages.properties
+++ b/trunk/service/src/main/resources/META-INF/messages/messages.properties
@@ -3,6 +3,8 @@ user.already.verified= User already verified
 user.doesnot.exist=User does not exist
 user.already.verified.code=111
 user.doesnot.exist.code=112
+user.company.no.access=You don't have access to this company
+user.company.no.access.errorCode=4004
 success=success
 success.code=110
 token.invalidToken=Invalid Token.
